Added repo for floedyn

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -6,6 +6,13 @@ repo_url = https://github.com/ESCOMP/CICE
 local_path = src
 required = True
 
+[floedyn]
+tag = cesm_main
+protocal = git
+repo_url = git@github.com:antipodalclimate/FloeDyn.git 
+local_path = floedyn
+required = True
+
 [externals_description]
 schema_version = 1.0.0
 
