--- a/Externals.cfg
+++ b/Externals.cfg
@@ -8,7 +8,7 @@ required = True
 
 [floedyn]
 tag = cesm_main
-protocal = git
+protocol = git
 repo_url = git@github.com:antipodalclimate/FloeDyn.git 
 local_path = floedyn
 required = True
