--- a/Externals.cfg
+++ b/Externals.cfg
@@ -3,7 +3,7 @@
 tag = cice6_4_1_20230707
 protocol = git
 repo_url = https://github.com/ESCOMP/CICE
-local_path = cice 
+local_path = src
 required = True
 
 [floedyn]
