moved source files for both cice and floedyn to src directory

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -3,14 +3,14 @@
 tag = cice6_4_1_20230707
 protocol = git
 repo_url = https://github.com/ESCOMP/CICE
-local_path = cice/src
+local_path = src/cice
 required = True
 
 [floedyn]
 tag = cesm_main
 protocol = git
 repo_url = git@github.com:antipodalclimate/FloeDyn.git 
-local_path = floedyn
+local_path = src/floedyn
 required = True
 
 [externals_description]
